# StreamMind

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test_1.yml
migrations/: 20260416052118_bot_memories.sql  20260416052147_interactions.sql
src/: lib.rs  main.rs  pool.rs  queries.rs
src/models/: bot_memories.rs  bot_metrics.rs  bots.rs  interaction.rs
streammind-config/: Cargo.toml
streammind-db/: Cargo.toml
streammind-db/migrations/: 20260416051603_bots.sql  20260416052033_stream_sessions.sql  20260416052204_bot_metrics.sql
streammind-db/src/: lib.rs  main.rs  pool.rs  queries.rs
streammind-db/src/models/: bot_memories.rs  mod.rs  stream_session.rs
streammind-db/tests/: test_first.rs  test_second.rs  test_third.rs
streammind_config/: Cargo.toml
streammind_config/config/: default.toml
streammind_config/config/bots/: aria.toml  pedro.toml
streammind_config/src/: lib.rs  loader.rs  sync.rs
streammind_config/src/models/: bots.rs  config.rs  mod.rs
streammind_config/src/models/model_con/: bot_manager.rs  database.rs  log.rs  mod.rs  monitor.rs  ollama.rs  stream.rs  stt.rs  tts.rs  youtube.rs
streammind_config/tests/: cama.toml  test_1.rs  test_2.rs  test_3.rs  test_4.rs
tests/: test_first.rs  test_second.rs  test_third.rs
