[package]
name = "StremMind"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = [ "mysql", "runtime-tokio-rustls", "chrono", "uuid", "migrate" ] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.52.0", features = ["full"] }
anyhow = "1"
thiserror = "1"

