[package]
name = "StremMind"
version = "0.1.0"
edition = "2024"
[workspace]
members = [ "streammind-config","streammind-db"]

[workspace.dependencies]
streammind-db = {path = "../streammind-db"}
streammind_config = {path = "../streammind_config"}
sqlx = { version = "0.8", features = [ "mysql", "runtime-tokio-rustls", "chrono", "uuid", "migrate" ] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15.7"
tokio = { version = "1.52.0", features = ["full"] }
anyhow = "1"
thiserror = "1"

