[package]
name = "StremMind"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ "streammind_config","streammind_db"]

[dependencies]
streammind_db = {path = "../StreamMind/streammind_db"}
streammind_config = {path = "../StreamMind/streammind_config"}

[workspace.dependencies]
sqlx = { version = "0.8.0", features = [ "mysql", "runtime-tokio-rustls", "chrono", "uuid", "migrate" ] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15.7"
tokio = { version = "1.52.0", features = ["full"] }
toml = "1.0"
tracing = "0.1.44"
anyhow = "1"
thiserror = "1"

