[package]
name = "streammind_config"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {workspace = true}
anyhow = {workspace = true}
toml = {workspace = true}
dotenvy = {workspace = true}
tokio = { workspace = true}
sqlx = {workspace = true}
chrono = {workspace = true}
tracing = {workspace = true}
streammind_db = {path = "../streammind_db"}
